# gacha.fun

./: .gitignore  .prettierignore  Anchor.toml  README.md  app.json  brand.md  eas.json  get_treasury.ts  package-lock.json  package.json
app/: _layout.tsx  index.tsx
components/: app-providers.tsx
constants/: app-config.ts
deployment/: gachapon_example.json
docs/: ARCHITECTURE.md  PRIVACY.md  SEEKER_RELEASE.md  matka-validation.html
features/gachapon/: gachapon-screen.tsx  use-gachapon.ts
lib/: gachapon-client.ts
programs/gachapon/: Cargo.toml
programs/gachapon/src/: lib.rs
scripts/: devnet-smoke.mjs  initialize-jackpot.mjs  market-smoke.mjs  smoke-constants.mjs
tests/: devnet-live.test.ts  instruction-coverage.test.ts
