[package]
name = "gachapon-example"
version = "0.1.0"
description = "Metaplex Core gachapon example"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gachapon_example"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "=0.11.0", features = ["anchor"] }
magicblock-magic-program-api = "0.8.8"
mpl-core = { version = "=0.11.1", features = ["anchor"] }
solana-program = "=2.3.0"
bincode = "1.3.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
